@@ -870,7 +870,7 @@ local ShortGun37mm = {}
 	ShortGun37mm.model = "models/tankgun/tankgun_short_37mm.mdl"
 	ShortGun37mm.caliber = 3.7
 	ShortGun37mm.gunclass = "SC"
-	ShortGun37mm.weight = 260
+	ShortGun37mm.weight = 200
 	ShortGun37mm.year = 1915
 	ShortGun37mm.sound = "weapons/ACF_Gun/ac_fire4.wav"
 		ShortGun37mm.round = {}
@@ -892,7 +892,7 @@ local ShortGun50mm = {}
 	ShortGun50mm.model = "models/tankgun/tankgun_short_50mm.mdl"
 	ShortGun50mm.caliber = 5.0
 	ShortGun50mm.gunclass = "SC"
-	ShortGun50mm.weight = 475
+	ShortGun50mm.weight = 330
 	ShortGun50mm.year = 1915
 	ShortGun50mm.sound = "weapons/ACF_Gun/ac_fire4.wav"
 		ShortGun50mm.round = {}
@@ -914,7 +914,7 @@ local ShortGun75mm = {}
 	ShortGun75mm.model = "models/tankgun/tankgun_short_75mm.mdl"
 	ShortGun75mm.caliber = 7.5
 	ShortGun75mm.gunclass = "SC"
-	ShortGun75mm.weight = 1080
+	ShortGun75mm.weight = 750
 	ShortGun75mm.year = 1936
 		ShortGun75mm.round = {}
 		ShortGun75mm.round.id = "75mmSC"
@@ -935,7 +935,7 @@ local ShortGun100mm = {}
 	ShortGun100mm.model = "models/tankgun/tankgun_short_100mm.mdl"
 	ShortGun100mm.caliber = 10.0
 	ShortGun100mm.gunclass = "SC"
-	ShortGun100mm.weight = 2200
+	ShortGun100mm.weight = 1750
 	ShortGun100mm.year = 1940
 		ShortGun100mm.round = {}
 		ShortGun100mm.round.id = "100mmSC"
@@ -956,7 +956,7 @@ local ShortGun120mm = {}
 	ShortGun120mm.model = "models/tankgun/tankgun_short_120mm.mdl"
 	ShortGun120mm.caliber = 12.0
 	ShortGun120mm.gunclass = "SC"
-	ShortGun120mm.weight = 4400
+	ShortGun120mm.weight = 4200
 	ShortGun120mm.year = 1944
 		ShortGun120mm.round = {}
 		ShortGun120mm.round.id = "120mmSC"
@@ -1234,7 +1234,7 @@ local ShortGun= {}
 	ShortGun.spread = 0.24
 	ShortGun.name = "Short-Barrel Cannon"
 	ShortGun.muzzleflash = "120mm_muzzleflash_noscale"
-	ShortGun.rofmod = 1.4
+	ShortGun.rofmod = 1.3
 	ShortGun.sound = "weapons/ACF_Gun/cannon_new.wav"
 	ShortGun.soundDistance = "Cannon.Fire"
 	ShortGun.soundNormal = " "
